fix: remove fish code; (fe) fix: can not filter by category, farm name